IGNITE-22315 TableManagerTest is fixed